# gimmedat

./: .gitignore  README.md  go.mod
.github/workflows/: base-ci.yml
cmd/: main.go
internal/cmd/: root.go  times.go
internal/parser/: zipCodes.go
internal/times/: fetcher.go
recommender/: mypy.ini  pyproject.toml  tox.ini
recommender/src/: __init__.py
recommender/tests/: test_basic.py
terraform/modules/aws-ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/aws-s3/: main.tf  outputs.tf  variables.tf
terraform/root-modules/gimmedat/: .terraform.lock.hcl  dev.tfvars  main.tf  variables.tf
